--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,6 +73,8 @@ nav a:hover {
   background-size: cover;
   background-position: center;
   height: 80vh;
+  max-width: 1400px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
