Remove specified images, make yarn collection boxes fully clickable, and create coming soon page for crowdfunding

--- a/_layouts/yarn.html
+++ b/_layouts/yarn.html
@@ -66,7 +66,6 @@ layout: default
 const allYarnImages = [
     // 4173-A3C0-E3 series (A Soft & Bold)
     'JPEG image-4173-A3C0-E3-0.jpg',
-    'JPEG image-4173-A3C0-E3-0.jpeg',
     'JPEG image-4173-A3C0-E3-1.jpg',
     'JPEG image-4173-A3C0-E3-3.jpg',
     'JPEG image-4173-A3C0-E3-4.jpg',
@@ -83,7 +82,6 @@ const allYarnImages = [
     'JPEG image-4173-A3C0-E3-15.png',
     
     // 4C05-941A-84 series (Everyday Luxury)
-    'JPEG image-4C05-941A-84-0.jpeg',
     'JPEG image-4C05-941A-84-01.png',
     'JPEG image-4C05-941A-84-02.png',
     'JPEG image-4C05-941A-84-03.png',
@@ -101,7 +99,6 @@ const allYarnImages = [
     'JPEG image-4C05-941A-84-16.png',
     
     // 4930-8DE4-28 series (Feather Light)
-    'JPEG image-4930-8DE4-28-0.jpeg',
     'JPEG image-4930-8DE4-28-001.png',
     'JPEG image-4930-8DE4-28-002.png',
     'JPEG image-4930-8DE4-28-003.png',
@@ -109,10 +106,7 @@ const allYarnImages = [
     'JPEG image-4930-8DE4-28-005.png',
     'JPEG image-4930-8DE4-28-006.png',
     'JPEG image-4930-8DE4-28-007.png',
-    'JPEG image-4930-8DE4-28-008.png',
-    
-    // 4AA1-B4A5-B6 series (Supreme Edition)
-    'JPEG image-4AA1-B4A5-B6-0.jpeg'
+    'JPEG image-4930-8DE4-28-008.png'
 ];
 
 // Populate color matrix with ALL images
